--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,12 +1,24 @@
 <h1>Quiz Dog - Admin</h1>
 
+<h2>VENUES</h2>
 <% @venues.each do |venue| %>
-  <h1><%= venue.name %></h1>
+  <h2><%= venue.name %></h2>
   <p><%= venue.address %></p>
   <p><%= venue.phone_number %></p>
   <%= link_to "Edit", edit_venue_path(venue) %>
   <%= link_to "Delete", venue_path(venue), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
 <% end %>
 
+<%= render "shared/venue_form", venue: @venue %>
 
-<%= render "shared/form", venue: @venue %>
+
+<h2>QUIZMASTERS</h2>
+
+<% @quizmasters.each do |quizmaster| %>
+  <h2><%= quizmaster.name %></h2>
+  <p><%= quizmaster.profile %></p>
+  <%= link_to "Edit", edit_quizmaster_path(quizmaster) %>
+  <%= link_to "Delete", quizmaster_path(quizmaster), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+<% end %>
+
+<%= render "shared/quizmaster_form", quizmaster: @quizmaster %>
