--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
+  <body>
+  <% unless @hide_navbar %>
+    <%= render "shared/navbar" %>
+  <% end %>
 <%= render "shared/flashes" %>
 
     <%= yield %>
