--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -5,6 +5,7 @@
   <h2><%= venue.name %></h2>
   <p><%= venue.address %></p>
   <p><%= venue.phone_number %></p>
+  <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
   <%= link_to "Edit", edit_venue_path(venue) %>
   <%= link_to "Delete", venue_path(venue), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
 <% end %>
