--- a/app/views/shared/_quizmaster_form.html.erb
+++ b/app/views/shared/_quizmaster_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @quizmaster do |f| %>
   <%= f.input :name %>
   <%= f.input :profile %>
+  <%= f.input :photo, as: :file %>
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit %>
 <% end %>
