--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,25 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
-<%= link_to "Test", admin_path, class: "btn btn-danger" %>
+
+<div class="container-home-top">
+  <div class="banner">
+    <%= image_tag("logo.png", class: "logo", alt: "quizmaster logo") %>
+    <h1 class="header-home-top">THE BEST QUIZ IN LONDON</h1>
+    <div class="banner-info">
+      <div class="banner-info-card">
+        <h1>PUB QUIZZES</h1>
+      </div>
+      <div class="banner-info-card">
+        <h1>PRIVATE EVENTS</h1>
+      </div>
+      <div class="banner-info-card">
+        <h1>CORPORATE EVENTS</h1>
+      </div>
+      <div class="banner-info-card">
+        <h1>BESPOKE QUIZZES</h1>
+      </div>
+      <div class="banner-info-card">
+        <h1>CHARITY EVENTS</h1>
+      </div>
+    </div>
+  </div>
+</div>
