--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,8 +7,8 @@
 .banner {
   background-image: url('banner2.png');
   background-size: cover;
-  padding: 0;
-  width: 100%;
+  background-position: center;
+  padding: 10%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -16,19 +16,20 @@
 }
 
 .logo {
-  width: 20%;
-  margin-top: 6rem;
-  margin-bottom: 2rem;
+  width: 20rem;
 }
 
 .header-home-top {
   color: white;
   border-top: 4px solid white;
   border-bottom: 4px solid white;
+  font-size: 5rem;
 }
 
 .banner-info {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   .banner-info-card {
     color: $quiz-dog-red;
@@ -38,8 +39,4 @@
     border-radius: 10px;
 
   }
-}
-
-.card-bg-img {
-  object-fit: cover;
 }
