--- a/app/views/shared/_venue_form.html.erb
+++ b/app/views/shared/_venue_form.html.erb
@@ -2,7 +2,10 @@
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
+   <%= f.input :description %>
   <%= f.input :photo, as: :file %>
+  <%= f.input :time %>
+  <%= f.input :day_of_the_week %>
   <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit %>
 <% end %>
