--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Venues#index</h1>
 <p>Find me in app/views/venues/index.html.erb</p>
 
-<div id="map" style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+<div class="container-venues-map">
+  <div class="container-venue-cards">
+  </div>
+  <div id="map" style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+</div>
