modified home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="banner">
     <%= image_tag("logo.png", class: "logo", alt: "quizmaster logo") %>
     <h1 class="header-home-top">THE BEST QUIZ IN LONDON</h1>
-    <div class="banner-info">
+    <%# <div class="banner-info">
       <div class="banner-info-card">
         <h1>PUB QUIZZES</h1>
       </div>
@@ -20,6 +20,6 @@
       <div class="banner-info-card">
         <h1>CHARITY EVENTS</h1>
       </div>
-    </div>
+    </div> %>
   </div>
 </div>
