--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,10 +10,26 @@
   background-position: center;
   padding: 10%;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.home-column-side {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+
+  p {
+    color: white;
+  }
+}
+
+.home-column-center {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .logo {
