--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,24 +2,17 @@
 
 <div class="container-home-top">
   <div class="banner">
-    <%= image_tag("logo.png", class: "logo", alt: "quizmaster logo") %>
-    <h1 class="header-home-top">THE BEST QUIZ IN LONDON</h1>
-    <%# <div class="banner-info">
-      <div class="banner-info-card">
-        <h1>PUB QUIZZES</h1>
-      </div>
-      <div class="banner-info-card">
-        <h1>PRIVATE EVENTS</h1>
-      </div>
-      <div class="banner-info-card">
-        <h1>CORPORATE EVENTS</h1>
-      </div>
-      <div class="banner-info-card">
-        <h1>BESPOKE QUIZZES</h1>
-      </div>
-      <div class="banner-info-card">
-        <h1>CHARITY EVENTS</h1>
-      </div>
-    </div> %>
+    <div class="home-column-side">
+      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+      <%= image_tag("gina.png", class: "avatar") %>
+    </div>
+    <div class="home-column-center">
+      <%= image_tag("logo.png", class: "logo", alt: "quizmaster logo") %>
+      <h1 class="header-home-top">THE BEST QUIZ IN LONDON</h1>
+    </div>
+    <div class="home-column-side">
+      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+      <%= image_tag("gina.png", class: "avatar") %>
+    </div>
   </div>
 </div>
