--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,6 +14,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-bottom: 5rem;
 }
 
 .home-column-side {
@@ -38,7 +39,7 @@
 
 .header-home-top {
   color: white;
-  border-top: 4px solid white;
+  // border-top: 4px solid white;
   border-bottom: 4px solid white;
   font-size: 5rem;
 }
@@ -57,3 +58,74 @@
 
   }
 }
+
+.carousel {
+  width: 60%;
+  height: auto;
+}
+
+// .card-group-image > img {
+//   height: 100px;
+//   width: 100%;
+//   margin-bottom: 5px;
+//   object-fit: cover;
+//   border-radius: 10px 10px 0px 0px;
+// }
+
+// .card-body h5  {
+//   margin-bottom: 0px;
+
+//   a {
+//   color: #808080;
+//   text-decoration: none;
+//   }
+// }
+
+// .card-body {
+//   margin-left: 10px;
+//   margin-right: 10px;
+//   position: relative;
+
+//   p {
+//     margin-bottom: 4px;
+//   }
+
+// }
+
+// .card-members-requests {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   margin-bottom: 4px;
+//   border-top: 1px solid rgb(189, 189, 189);
+//   padding-top: 2px;
+
+//   .card-members-number {
+//     margin-bottom: 0px;
+//   }
+
+//   .card-requests-number {
+//     text-decoration: none;
+//     color: $quiz-dog-red;
+//     font-size: 12px;
+//     margin-right: 0px 0px;
+//     padding: 0px 0px;
+//   }
+// }
+
+// .info-window-group-role {
+//   background-color: $quiz-dog-red;
+//   border: 0px;
+//   color: white;
+//   padding: 0px 4px;
+//   border-radius: 10px;
+//   font-size: 8px;
+//   font-weight: bold;
+//   position: absolute;
+//   left: 160px;
+//   top: -19px;
+// }
+
+// .approval-pending {
+//   color: $quiz-dog-red;
+// }
