--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,17 +2,76 @@
 
 <div class="container-home-top">
   <div class="banner">
-    <div class="home-column-side">
-      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
-      <%= image_tag("gina.png", class: "avatar") %>
-    </div>
-    <div class="home-column-center">
-      <%= image_tag("logo.png", class: "logo", alt: "quizmaster logo") %>
-      <h1 class="header-home-top">THE BEST QUIZ IN LONDON</h1>
-    </div>
-    <div class="home-column-side">
-      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
-      <%= image_tag("gina.png", class: "avatar") %>
+    <div class="container">
+      <div class="row justify-content-center">
+        <%# <div class="col-3">
+          <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+          <%= image_tag("gina.png", class: "avatar") %>
+        <%# </div> %>
+        <div class="col-10 text-center">
+          <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
+          <h1 class="header-home-top ">THE BEST QUIZ IN LONDON</h1>
+        </div>
+        <%# <div class="col-3">
+          <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+          <%= image_tag("gina.png", class: "avatar") %>
+        <%# </div>  %>
+      </div>
     </div>
   </div>
 </div>
+
+
+<%# <div class="container">
+  <div class="row">
+    <div class="col-4 card-group-image">
+      <%= image_tag("banner1.png") %>
+      <%# <div class="card-body">
+        <%= link_to "#", class: 'profile-card-link' do %>
+          <%# <h5>Pub Quizzes</h5>
+          <p>We do tons of them</p> %>
+        <%# <% end %>
+      <%# </div>
+  </div>
+</div> %>
+
+<div class="container d-flex justify-content-center">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="<%= asset_url('banner1.png') %>" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>PUB QUIZZES</h1>
+          <p>we do loads</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="<%= asset_url('finger.png') %>" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>DOGS</h1>
+          <p>beautiful beasts</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="<%= asset_url('dog.png') %>" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>CORPORATE EVENTS</h1>
+          <p>they pay well</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
