--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -16,24 +16,22 @@
   top: 0;
 }
 
+.card-venue {
+
+}
+
 .card-venue-image > img {
     width: 15rem;
-    margin-bottom: 5px;
     background-size: cover;
     background-position: center;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     border-radius: 10px 10px 0px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 22px;
-    font-weight: bolder;
-    text-shadow: 0 0 10px rgba(0,0,0,0.7);
-  }
+}
 
-  .card-body {
-    background-color: #FFF3DA;
-  }
+.card-body {
+  background-color: #FFF3DA;
+  justify-content: center;
+}
 
 
 @media(max-width: 992px) {
