--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,64 +1,45 @@
 // Specific CSS for your home-page
-.container-home-top {
-  display: flex;
-  height: 100vh;
-}
+// .container-home-top {
+//   display: flex;
+//   height: 100vh;
+// }
 
 .banner {
   background-image: url('banner2.png');
   background-size: cover;
   background-position: center;
-  padding: 10%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  height: 100vh;
   align-items: center;
   width: 100%;
-  margin-bottom: 5rem;
-}
-
-.home-column-side {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 0;
-
-  p {
-    color: white;
-  }
-}
-
-.home-column-center {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
 }
 
 .logo {
   width: 20rem;
+  padding-top: 10rem;
 }
 
 .header-home-top {
   color: white;
-  // border-top: 4px solid white;
-  border-bottom: 4px solid white;
-  font-size: 5rem;
+  border: 4px solid white;
+  font-size: 3rem;
+  width: fit-content;
+  padding: 0 20px;
 }
 
-.banner-info {
+.home-testimonial-card {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border: 4px solid black;
 
-  .banner-info-card {
-    color: $quiz-dog-red;
-    background-color: white;
-    margin: 0rem 1rem 0rem 1rem;
-    text-align: center;
-    border-radius: 10px;
+  p {
+    margin: 0;
+  }
 
+  .avatar {
+    margin-left: 0.5rem;
   }
 }
-
 .carousel {
   width: 60%;
   height: auto;
