--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,45 @@
 
 
-<div class="container-home-top">
-  <div class="banner">
-    <div class="container">
-      <div class="row justify-content-center">
-        <%# <div class="col-3">
-          <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
-          <%= image_tag("gina.png", class: "avatar") %>
-        <%# </div> %>
-        <div class="col-10 text-center">
-          <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
-          <h1 class="header-home-top ">THE BEST QUIZ IN LONDON</h1>
-        </div>
-        <%# <div class="col-3">
-          <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
-          <%= image_tag("gina.png", class: "avatar") %>
-        <%# </div>  %>
+<div class="banner">
+  <div class="container">
+    <div class="row justify-content-center">
+
+      <div class="col-10 d-flex justify-content-center">
+        <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
       </div>
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center">
+        <h5 class="header-home-top ">BOOK YOUR QUIZ TODAY</h5>
+      </div>
+    </div>
+
     </div>
   </div>
 </div>
 
+
+<div class="row justify-content-evenly bg-success">
+  <div class="col-3">
+    <div class="home-testimonial-card">
+      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+      <%= image_tag("gina.png", class: "avatar") %>
+    </div>
+  </div>
+
+  <div class="col-3">
+     <div class="home-testimonial-card">
+      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+      <%= image_tag("gina.png", class: "avatar") %>
+    </div>
+  </div>
+
+   <div class="col-3">
+     <div class="home-testimonial-card">
+      <p> "Confident and proud to say that we've got the best quiz in Deptford." Gina, Manager at the Brookmill </p>
+      <%= image_tag("gina.png", class: "avatar") %>
+    </div>
+  </div>
+</div>
 
 <%# <div class="container">
   <div class="row">
@@ -35,38 +54,40 @@
   </div>
 </div> %>
 
-<div class="container d-flex justify-content-center">
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="<%= asset_url('banner1.png') %>" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>PUB QUIZZES</h1>
-          <p>we do loads</p>
+<div class="container-background bg-warning bg-gradient">
+  <div class="container d-flex justify-content-center">
+    <div id="carouselExampleControls" class="carousel slide my-5" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="<%= asset_url('banner1.png') %>" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>PUB QUIZZES</h1>
+            <p>we do loads</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="<%= asset_url('finger.png') %>" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>DOGS</h1>
+            <p>beautiful beasts</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="<%= asset_url('dog.png') %>" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>CORPORATE EVENTS</h1>
+            <p>they pay well</p>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="<%= asset_url('finger.png') %>" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>DOGS</h1>
-          <p>beautiful beasts</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="<%= asset_url('dog.png') %>" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>CORPORATE EVENTS</h1>
-          <p>they pay well</p>
-        </div>
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
