added quizmaster field to venues and removed description

--- a/app/views/shared/_venue_form.html.erb
+++ b/app/views/shared/_venue_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
-   <%= f.input :description %>
+  <%= f.input :quizmaster %>
   <%= f.input :photo, as: :file %>
   <%= f.input :time %>
   <%= f.input :day_of_the_week %>
