--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -16,13 +16,15 @@
   top: 0;
 }
 
-.card-venue {
-
+.card-venue-image {
+  width: 15rem;
+  height: 10rem;
 }
 
 .card-venue-image > img {
-    width: 15rem;
-    background-size: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     background-position: center;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     border-radius: 10px 10px 0px 0px;
@@ -31,8 +33,24 @@
 .card-body {
   background-color: #FFF3DA;
   justify-content: center;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.card-body-title {
+  background-color: $quiz-dog-red;
+  color: white;
+  font-weight: bold;
+  padding: 0.4rem;
+  border-radius: 10px;
+
+  h4 {
+    margin: 0;
+    line-height: 1;
+  }
+}
 
 @media(max-width: 992px) {
   .cards {
