--- a/app/views/quizmasters/edit.html.erb
+++ b/app/views/quizmasters/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render "shared/quizmaster_form", quizmaster: @quizmaster %>
+<h2>Edit one of your QUIZMASTERS!</h2>
+
+<%= render "shared/edit_quizmaster_form", quizmaster: @quizmaster %>
