removed form from admin page and moved it to venues/new

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -12,6 +12,7 @@
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
       <h2>VENUES</h2>
+      <%= link_to "Create a new VENUE!", new_venue_path %>
         <div class="admin-container-cards">
           <% @venues.each do |venue| %>
             <h2><%= venue.name %></h2>
@@ -19,12 +20,12 @@
             <p><%= venue.phone_number %></p>
             <p><%= venue.day_of_the_week %></p>
             <p><%= venue.time %></p>
-            <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
+            <% if venue.photo.key %>
+              <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
+            <% end %>
             <%= link_to "Edit", edit_venue_path(venue) %>
             <%= link_to "Delete", venue_path(venue), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
           <% end %>
-          <h2>ADD VENUES</h2>
-          <%= render "shared/venue_form", venue: @venue %>
         </div>
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
