changed partial of quizmaster form from form_for to form_with

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,17 +3,35 @@
 <div class="banner">
   <div class="container">
     <div class="row justify-content-center">
-
       <div class="col-10 d-flex justify-content-center">
         <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
       </div>
-    <div class="row">
-      <div class="col-12 d-flex justify-content-center">
-        <h5 class="header-home-top ">BOOK YOUR QUIZ TODAY</h5>
+    </div>
+
+    <div class="row home-page-buttons">
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-large">QUIZZING</h5>
+      </div>
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-large">KARAOKE</h5>
+      </div>
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-large">WHO IS QUIZDOG</h5>
       </div>
     </div>
 
+    <div class="row home-page-buttons">
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-37">QUIZZING</h5>
+      </div>
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-37">KARAOKE</h5>
+      </div>
+      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <h5 class="button-37">WHO IS QUIZDOG</h5>
+      </div>
     </div>
+
   </div>
 </div>
 
