--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -2,64 +2,60 @@
   display: flex;
 }
 
-.cards {
-  flex-grow: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 2rem;
-  padding: 2rem;
-}
-
 #map {
   height: 100vh;
   position: sticky;
   top: 0;
 }
-
-.card-venue-image {
-  width: 15rem;
-  height: 10rem;
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  flex-grow: 1;
 }
 
-.card-venue-image > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-position: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    border-radius: 10px 10px 0px 0px;
-}
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
 
-.card-body {
-  background-color: #FFF3DA;
-  justify-content: center;
-  padding: 0 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.card-body-title {
-  background-color: $quiz-dog-red;
-  color: white;
-  font-weight: bold;
-  padding: 0.4rem;
-  border-radius: 10px;
-
-  h4 {
-    margin: 0;
-    line-height: 1;
+  #map {
+    display: none;
   }
 }
 
-@media(max-width: 992px) {
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
   .cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media(max-width: 768px) {
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
   .cards {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+
+
+
+
+
+// box shadow box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
