--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,14 @@
         <%= image_tag("logo.png", class: "logo mb-2", alt: "quizmaster logo") %>
       </div>
     </div>
-
+    <div class="homepage-body">
+      <h2>Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes? Fancy learning something whilst damaging close friendships?</h2>
+      <h2>Sick of the same egg heads winning every week?</h2>
+      <h2>If yes, Quiz Dog has you covered.</h2>
+      <h2>We have venues all across London (and one in America) that blow the rest out of the water.</h2>
+      <h2>Everything’s done on your phone too, because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!</h2>
+      <h2>Check our venues page to find your closest Quiz Dog event.</h2>
+    </div>
     <div class="row home-page-buttons">
       <div class="col-md-4 col-sm-12 d-flex justify-content-center">
         <h5 class="button-large">QUIZZING</h5>
@@ -17,18 +24,6 @@
       </div>
       <div class="col-md-4 col-sm-12 d-flex justify-content-center">
         <h5 class="button-large">WHO IS QUIZDOG</h5>
-      </div>
-    </div>
-
-    <div class="row home-page-buttons">
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-37">QUIZZING</h5>
-      </div>
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-37">KARAOKE</h5>
-      </div>
-      <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-37">WHO IS QUIZDOG</h5>
       </div>
     </div>
 
