--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,7 +10,7 @@
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Poppins',Arial,sans-serif;
+  // font-family: 'Poppins',Arial,sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -24,8 +24,6 @@
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-
-
   margin: 0 auto;
 }
 
@@ -54,36 +52,61 @@
 }
 
 
-
-.button-37 {
+.button-navbar {
+  appearance: button;
   background-color: $quiz-dog-red;
-  border: 1px solid $quiz-dog-red;
+  border: 1px solid #000;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+  // box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
-  font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 16px;
+  display: inline-block;
+  // font-family: 'Poppins',Arial,sans-serif;
+  font-size: 14px;
   font-weight: 400;
-  outline: none;
-  outline: 0;
-  padding: 10px 25px;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
   text-align: center;
-  transform: translateY(0);
-  transition: transform 150ms, box-shadow 150ms;
+  text-transform: none;
+  touch-action: manipulation;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin: 0 auto;
 }
+// .button-37 {
+//   background-color: $quiz-dog-red;
+//   border: 1px solid $quiz-dog-red;
+//   border-radius: 4px;
+//   box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+//   box-sizing: border-box;
+//   color: #fff;
+//   cursor: pointer;
+//   font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+//   font-size: 16px;
+//   font-weight: 400;
+//   outline: none;
+//   outline: 0;
+//   padding: 10px 25px;
+//   text-align: center;
+//   transform: translateY(0);
+//   transition: transform 150ms, box-shadow 150ms;
+//   user-select: none;
+//   -webkit-user-select: none;
+//   touch-action: manipulation;
+// }
 
-.button-37:hover {
-  box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-  transform: translateY(-2px);
-}
+// .button-37:hover {
+//   box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+//   transform: translateY(-2px);
+// }
 
-@media (min-width: 768px) {
-  .button-37 {
-    padding: 10px 30px;
-  }
-}
+// @media (min-width: 768px) {
+//   .button-37 {
+//     padding: 10px 30px;
+//   }
+// }
