--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,21 +1,80 @@
-.card-category {
+.card-venue-container {
   display: flex;
-  flex-direction: column; /* Stack image on top of text */
-  align-items: center; /* Center content horizontally */
-  text-align: center; /* Center text */
-  width: 200px;
-  height: 200px; /* Adjust the height as needed */
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  overflow: hidden; /* Ensure image doesn't overflow */
+  justify-content: center;
+  padding-top: 100px;
 }
 
-.card-category img {
+.card-venue-category {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 260px;
+  height: 285px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.card-venue-category img {
+  height: 50%;
   width: 100%;
-  height: 70%;
   object-fit: cover;
 }
+
+
+.card-venue-info {
+  width: 95%;
+  align-items: center;
+  padding: 10px 5px;
+  font-weight: bold;
+
+  h5 {
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    padding: 0;
+    margin-bottom: 0rem;
+  }
+
+  p {
+    font-size: 14px;
+    color: gray;
+    margin-bottom: 0px;
+  }
+
+  i {
+    // color: $quiz-dog-red;
+    margin-left: 5px;
+  }
+}
+
+.card-venue-time {
+  margin-top: 0.2rem;
+  display: flex;
+  justify-content: center;
+  padding-top: 8px;
+  border-top: 1px solid rgb(189, 189, 189);
+}
+
+.card-venue-time p {
+  margin: 0px;
+  margin-left: 2px;
+  display: flex;
+  align-items: center;
+}
+
+
+
+
+// .event-info-card-body h4 {
+//   color: $our-red;
+// }
+
+// .event-info-card-body p {
+//   color: $gray;
+//   font-size: 12px;
+//   font-family: $body-font;
+//   line-height: 1;
+//   opacity: .7;
+//   margin-bottom: 8px;
+//   margin-top: 8px;
+// }
