--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,1 +1,3 @@
-<%= cl_image_tag @venue.photo.key, height: 300, width: 400, crop: :fill %>
+<div class="card-venue-container">
+  <%= render 'shared/card' %>
+</div>
