modified pages controller and quizmaster controller to eliminate references to gigs

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -41,9 +41,10 @@
     margin-bottom: 0px;
   }
 
-  i {
-    // color: $quiz-dog-red;
-    margin-left: 5px;
+  img {
+    border: 1px solid $quiz-dog-red;
+    width: 10px;
+    border-radius: 50%;
   }
 }
 
