--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,13 +17,13 @@
     </div>
     <div class="row home-page-buttons">
       <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-large">QUIZZING</h5>
+        <h5 class="button-quizdog-primary">QUIZZING</h5>
       </div>
       <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-large">KARAOKE</h5>
+        <h5 class="button-quizdog-primary">KARAOKE</h5>
       </div>
       <div class="col-md-4 col-sm-12 d-flex justify-content-center">
-        <h5 class="button-large">WHO IS QUIZDOG</h5>
+        <h5 class="button-quizdog-primary">WHO IS QUIZDOG</h5>
       </div>
     </div>
 
