--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -19,8 +19,10 @@
           <%= cl_image_tag venue.photo.key %>
             <div class="card-venue-info">
               <h5><%= venue.name %></h5>
+              <% if venue.quizmaster %>
               <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %>
               <%# <%= cl_image_tag venue.quizmaster.photo.key %>
+              <% end %>
               </p>
               <div class="card-venue-time">
                 <p><%= venue.day_of_the_week.upcase %> at</p>
