--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -4,7 +4,9 @@
   <div class="cards">
     <% @venues.each do |venue| %>
     <div class="card-venue-category">
+      <% if venue.photo %>
       <%= cl_image_tag venue.photo.key %>
+      <% end %>
       <div class="card-venue-info">
         <h5><%= venue.name %></h5>
         <p>hosted by <%= link_to venue.quizmaster.name, quizmaster_path(venue.quizmaster) %>
