--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,10 +10,11 @@
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  // font-family: 'Poppins',Arial,sans-serif;
-  font-size: 14px;
+  font-family: "Lovelo-Black";
+  font-size: 20px;
   font-weight: 400;
   line-height: 20px;
+  // width: 250px;
   margin: 0 5px 10px 0;
   overflow: visible;
   padding: 12px 40px;
@@ -24,7 +25,7 @@
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  margin: 0 auto;
+  margin: 1rem auto;
 }
 
 .button-quizdog-primary:focus {
