--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -10,11 +10,11 @@ $body-font: 'Mulish', sans-serif;
 $headers-font: 'Raleway', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+@font-face {
+  font-family: "Font Name";
+  src: font-url('Lovelo-Black.eot');
+  src: font-url('Lovelo-Black.eot?#iefix') format('embedded-opentype'),
+       font-url('Lovelo-Black.woff') format('woff'),
+       font-url('Lovelo-Black.ttf') format('truetype')
+}
+$my-font: "Lovelo-Black";
