--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,19 +48,19 @@
 
 
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag("banner.png", class: "d-block w-100", alt:"...") %>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+  <div id="home-page-carousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item carousel-image bg-img-1 active">
+        <%# <%= image_tag("banner.png", class: "bg-image", alt:"Joe quizzing") %>
+      </div>
+      <div class="carousel-item carousel-image bg-img-2">
+        <%# <%= image_tag("banner1.png", class: "bg-image", alt:"Joe quizzing") %>
+      </div>
+      <div class="carousel-item carousel-image bg-img-3">
+        <%# <%= image_tag("banner2.png", class: "bg-image", alt: "people quizzing") %>
+      </div>
     </div>
   </div>
-</div>
 
 <%# <div class="row justify-content-evenly bg-success">
   <div class="col-3">
